fixing some bug font-end and have some modify with layout, in textarea field when you typing to long, the children div is being bigger than parent, so I fixed by using word-wrap and word-break in CSS, and when post or comment with paragraph has down the line, the client not render exactly, so I fixed by using function convertStringToTextHTML, and when user post article, if succes, input field will reset

--- a/server/public/css/common.css
+++ b/server/public/css/common.css
@@ -1,9 +1,128 @@
-/*body{
-	background: #eeeeee;
-}*/
+body{
+	background: #e9ebee;
+	color: #1d2129;
+	font-size: 14px;
+	font-family: Helvetica, Arial, sans-serif;
+}
+
+a.btn-link:hover {
+	text-decoration: none;
+}
+
+a.btn-link:visited {
+	text-decoration: none;
+}
+
+li.listview {
+	list-style: none;
+	border: 1px solid transparent;
+}
+
+li.listview.active a{
+	background-color: #f5f6f7;
+	border-color: rgba(0,0,0,.125);
+	border-radius: .25rem;
+}
+
+li.listview:hover a{
+	background-color: #f5f6f7;
+	border-color: rgba(0,0,0,.125);
+	border-radius: .25rem;
+}
+
+div.media {
+	word-break: break-word;
+}
+
+div.form-control[readonly] {
+	background-color: #f2f3f5;
+	border-radius: 16px;
+	border-color: #fff;
+	font-size: 14px;
+	height: 100%;
+	flex-grow: 0;
+}
+
+textarea.form-control {
+	border: 1px solid #ccd0d5;
+	border-radius: 16px;
+}
+
+textarea.form-control:focus {
+	box-shadow: none;
+}
+
+input.form-control:focus {
+	box-shadow: none;
+}
+
+textarea.add-comment.form-control {
+	font-size: 14px;
+}
+
+textarea.add-comment.form-control:focus {
+	border: 1px solid #ccd0d5;
+	box-shadow: none;
+}
+
+a.card-link {
+	color: #385898;
+}
+
+a.card-link:hover {
+	text-decoration: underline;
+}
+
+button.btn.btn-primary {
+	background-color: #4267b2;
+	color: #fff;
+}
+
+button.btn.btn-primary:hover {
+	background-color: #365899;
+	color: #fff;
+}
+
+div.card-header, div.card-footer {
+	background-color: #fff;
+}
+
+div.card-header {
+	padding: 12px 12px 10px 12px;
+}
+
+div.card-footer {
+	padding: 2px 12px 4px 12px;
+}
+
+div.card-body {
+	padding: 12px 12px 10px 12px;
+}
+
+.author-name {
+	font-size: 15px;
+}
+
+.article-body {
+	font-size: 15px;
+}
+
+.btn.btn-link {
+	color: #385898;
+}
+
+.btn.btn-link:hover {
+	color: #385898;
+}
+
 .form-inline {
    display: inline-block;
 }
+
+li.comment {
+	padding-bottom: 0;
+}
+
 .navbar-header.col {
 	padding: 0 !important;
 }	
